Changelog
=========

3.0 (unreleased)
----------------

- As part of each progress handler report, also do an automatic transaction
  savepoint, to give the ZODB cache a chance to do garbage collection.

- Added a `threshold` argument to the catalog's `addColumn` and `delColumn`
  methods and used it for a progress handler. Also optimized some of their
  internals.

- Added support for simple `sort_on` queries with two sort indexes and
  differing `sort_order` values. For example:
  `{'foo': 'a', 'sort_on': ('foo', 'bar')}`
  `{'foo': 'a', 'sort_on': ('foo', 'bar'), 'sort_order': ('', 'reverse')}`

- Change some internal wiring and let multiple sort_on values pass through.
  `Catalog.sortResults` can now be called with a list of search indexes.

- Added support for `not` queries in field and keyword indexes. Both
  restrictions of normal queries and range queries are supported, as well as
  purely exclusive queries. For example:
  `{'foo': {'query': ['a', 'ab'], 'not': 'a'}}`,
  `{'foo': {'query': 'a', 'range': 'min', 'not': ['a', 'e', 'f']}}` and
  `{'foo': {'not': ['a', 'b']}}`. Note that negative filtering on an index
  still restricts items to those having a value in the index. So with 10
  documents, 5 of them in the `foo` index with a value of `1`, a query for
  `not 1` will return no items instead of the 5 items without a value. You
  need to index a dummy/default value if you want to consider all items for
  a particular index.

- Updated deprecation warnings to point to Zope 4 instead of 2.14.

2.13.22 (2011-11-17)
--------------------

- Added a new `load_from_path` class method to the `PriorityMap`, which allows
  one to load a plan from a file, instead of a module via an environment var.

2.13.21 (2011-10-20)
--------------------

- Refactored value index logic. Determine value indexes per catalog instead of
  globally. Store value index set in the priority map, so it can be seen in the
  ZMI and stored in the module level storage.
